# balancedaemon

./: CMakeLists.txt  README.md  balance.sql  balanceservice.h  daemonize.cpp  install_db.sh  main.cpp  sockutil.cpp  sockutils.h  test.sh
